Fix footer spacing

--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -4,8 +4,7 @@
   display: flex;
   font-size: 13px;
   justify-content: flex-end;
-  margin-top: 35px;
-  padding: 0 15px;
+  padding: 15px;
 }
 
 .communist {
